5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4431/executions/1649_1055.log
== TEST (2019-04-05 01:03:12) 
-- CODE:
from math import*
v0=float(input("Digite a velocidade incial em m/s: "))
a=float(input("Digite o angulo em graus: "))
D=float(input("Digite a distancia horizontal entre o passaro e o porco: "))
a=radians(a)
R=(v0**2)*(sen(2*a))/9.8
if(abs(D-R)<0,1):
	print("sim")
else:
	print("nao")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    R=(v0**2)*(sen(2*a))/9.8
NameError: name 'sen' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 01:06:26) 
-- CODE:
from math import*
v0=float(input("Digite a velocidade incial em m/s: "))
a=float(input("Digite o angulo em graus: "))
D=float(input("Digite a distancia horizontal entre o passaro e o porco: "))
a=radians(a)
R=(v0**2)*(sin(2*a))/9.8
if(abs(D-R)<0,1):
	print("sim")
else:
	print("nao")

-- OUTPUT:
sim
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 01:06:45) 
-- CODE:
from math import*
v0=float(input("Digite a velocidade incial em m/s: "))
a=float(input("Digite o angulo em graus: "))
D=float(input("Digite a distancia horizontal entre o passaro e o porco: "))
a=radians(a)
R=(v0**2)*(sin(2*a))/9.8
if(abs(D-R)>0,1):
	print("sim")
else:
	print("nao")

-- OUTPUT:
sim
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-05 01:07:02) 
-- CODE:
from math import*
v0=float(input("Digite a velocidade incial em m/s: "))
a=float(input("Digite o angulo em graus: "))
D=float(input("Digite a distancia horizontal entre o passaro e o porco: "))
a=radians(a)
R=(v0**2)*(sin(2*a))/9.8
if(abs(D-R)>0,1):
	print("sim")
else:
	print("nao")

-- EXECUTION TIME:
0.163835
-- TEST CASE 1:
---- input:
10.5
45.5
11.3
---- correct output:
sim
---- user output:
sim
-- TEST CASE 2:
---- input:
29.5
17.1
51.0
---- correct output:
nao
---- user output:
sim
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 01:07:11) 
-- CODE:
from math import*
v0=float(input("Digite a velocidade incial em m/s: "))
a=float(input("Digite o angulo em graus: "))
D=float(input("Digite a distancia horizontal entre o passaro e o porco: "))
a=radians(a)
R=(v0**2)*(sin(2*a))/9.8
if(abs(D-R)>=0,1):
	print("sim")
else:
	print("nao")

-- OUTPUT:
sim
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-05 01:07:17) 
-- CODE:
from math import*
v0=float(input("Digite a velocidade incial em m/s: "))
a=float(input("Digite o angulo em graus: "))
D=float(input("Digite a distancia horizontal entre o passaro e o porco: "))
a=radians(a)
R=(v0**2)*(sin(2*a))/9.8
if(abs(D-R)>=0,1):
	print("sim")
else:
	print("nao")

-- EXECUTION TIME:
0.156333
-- TEST CASE 1:
---- input:
10.5
45.5
11.3
---- correct output:
sim
---- user output:
sim
-- TEST CASE 2:
---- input:
29.5
17.1
51.0
---- correct output:
nao
---- user output:
sim
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-05 01:07:23) 
-- CODE:
from math import*
v0=float(input("Digite a velocidade incial em m/s: "))
a=float(input("Digite o angulo em graus: "))
D=float(input("Digite a distancia horizontal entre o passaro e o porco: "))
a=radians(a)
R=(v0**2)*(sin(2*a))/9.8
if(abs(D-R)<=0,1):
	print("sim")
else:
	print("nao")

-- EXECUTION TIME:
0.191422
-- TEST CASE 1:
---- input:
10.5
45.5
11.3
---- correct output:
sim
---- user output:
sim
-- TEST CASE 2:
---- input:
29.5
17.1
51.0
---- correct output:
nao
---- user output:
sim
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 13:11:00) 
-- CODE:
from math import*
v0=float(input("Digite a velocidade incial em m/s: "))
a=float(input("Digite o angulo em graus: "))
D=float(input("Digite a distancia horizontal entre o passaro e o porco: "))
a=radians(a)
R=(v0**2)*(sin(2*a))/9.8
if((abs(D-R))<0,1):
	print("sim")
else:
	print("nao")

-- OUTPUT:
sim
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 13:11:25) 
-- CODE:
from math import*
v0=float(input("Digite a velocidade incial em m/s: "))
a=float(input("Digite o angulo em graus: "))
D=float(input("Digite a distancia horizontal entre o passaro e o porco: "))
a=radians(a)
R=(v0**2)*(sin(2*a))/9.8
print(R)
if((abs(D-R))<0,1):
	print("sim")
else:
	print("nao")

-- OUTPUT:
11.2482865705094
sim
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 13:12:26) 
-- CODE:
from math import*
v0=float(input("Digite a velocidade incial em m/s: "))
a=float(input("Digite o angulo em graus: "))
D=float(input("Digite a distancia horizontal entre o passaro e o porco: "))
a=radians(a)
R=(v0**2)*(sin(2*a))/9.8
print(abs(R))
if((abs(D-R))<0,1):
	print("sim")
else:
	print("nao")

-- OUTPUT:
11.2482865705094
sim
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 13:12:58) 
-- CODE:
from math import*
v0=float(input("Digite a velocidade incial em m/s: "))
a=float(input("Digite o angulo em graus: "))
D=float(input("Digite a distancia horizontal entre o passaro e o porco: "))
a=radians(a)
R=(v0**2)*(sin(2*a))/9.8
R=abs(R)
if((D-R)<0,1):
	print("sim")
else:
	print("nao")

-- OUTPUT:
sim
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 13:13:20) 
-- CODE:
from math import*
v0=float(input("Digite a velocidade incial em m/s: "))
a=float(input("Digite o angulo em graus: "))
D=float(input("Digite a distancia horizontal entre o passaro e o porco: "))
a=radians(a)
R=(v0**2)*(sin(2*a))/9.8
R=abs(R)
if((D-R)>0,1):
	print("sim")
else:
	print("nao")

-- OUTPUT:
sim
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 13:13:46) 
-- CODE:
from math import*
v0=float(input("Digite a velocidade incial em m/s: "))
a=float(input("Digite o angulo em graus: "))
D=float(input("Digite a distancia horizontal entre o passaro e o porco: "))
a=radians(a)
R=(v0**2)*(sin(2*a))/9.8
R=abs(R)
if((D-R)<0.1):
	print("sim")
else:
	print("nao")

-- OUTPUT:
sim
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-05 13:14:01) 
-- CODE:
from math import*
v0=float(input("Digite a velocidade incial em m/s: "))
a=float(input("Digite o angulo em graus: "))
D=float(input("Digite a distancia horizontal entre o passaro e o porco: "))
a=radians(a)
R=(v0**2)*(sin(2*a))/9.8
R=abs(R)
if((D-R)<0.1):
	print("sim")
else:
	print("nao")

-- EXECUTION TIME:
0.153135
-- TEST CASE 1:
---- input:
10.5
45.5
11.3
---- correct output:
sim
---- user output:
sim
-- TEST CASE 2:
---- input:
29.5
17.1
51.0
---- correct output:
nao
---- user output:
nao
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
